<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_theme_24dp"
        android:orderInCategory="1"
        android:title="@string/action_theme"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search_history"
        android:icon="@drawable/ic_search_history_24dp"
        android:orderInCategory="2"
        android:title="@string/page_search_history"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_empty_search_history"
        android:icon="@drawable/ic_delete_forever_24dp"
        android:orderInCategory="3"
        android:title="@string/action_empty_search_history"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_ipa_filter"
        android:icon="@drawable/ic_filter_list_24dp"
        android:orderInCategory="4"
        android:title="@string/action_ipa_filter"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_affix_tips"
        android:icon="@drawable/ic_tips_info_24dp"
        android:orderInCategory="5"
        android:title="@string/action_affix_tips"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_affix_filter"
        android:icon="@drawable/ic_filter_list_24dp"
        android:orderInCategory="6"
        android:title="@string/action_affix_filter"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>
