<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/TextAppearance.LandingTheme.Body1"
        android:text="@string/about_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/about_divider_a"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_app_name" />

    <com.peter.landing.ui.about.ItemAbout
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/about_version_title"
        app:description="@string/app_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_divider_a"/>

    <View
        android:id="@+id/about_divider_b"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_version" />

    <com.peter.landing.ui.about.ItemAbout
        android:id="@+id/about_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/about_date_title"
        app:description="@string/app_last_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_divider_b"/>

    <View
        android:id="@+id/about_divider_c"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_date" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_terms_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/TextAppearance.LandingTheme.Body1"
        android:text="@string/about_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_divider_c"
        app:layout_constraintBottom_toTopOf="@+id/about_divider_d"/>

    <View
        android:id="@+id/about_divider_d"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_terms_title"
        app:layout_constraintBottom_toTopOf="@+id/about_service_terms" />

    <com.peter.landing.ui.about.ItemAbout
        android:id="@+id/about_service_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/about_service_terms"
        app:description="@string/about_service_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_divider_d"/>

    <View
        android:id="@+id/about_divider_e"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_service_terms" />

    <com.peter.landing.ui.about.ItemAbout
        android:id="@+id/about_privacy_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/about_privacy_policy_terms"
        app:description="@string/about_privacy_policy_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_divider_e"/>

    <View
        android:id="@+id/about_divider_f"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_privacy_terms" />

    <com.peter.landing.ui.about.ItemAbout
        android:id="@+id/about_acknowledge_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/about_acknowledge_terms"
        app:description="@string/about_acknowledge_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_divider_f"/>

    <View
        android:id="@+id/about_divider_g"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_acknowledge_terms" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:alpha="?alphaEmphasisMedium"
        android:gravity="center"
        android:text="@string/about_contact"
        android:textAppearance="@style/TextAppearance.LandingTheme.Body2"
        app:layout_constraintBottom_toTopOf="@+id/about_advisement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_advisement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:alpha="?alphaEmphasisMedium"
        android:gravity="center"
        android:text="@string/about_advisement"
        android:textAppearance="@style/TextAppearance.LandingTheme.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>