<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_button_section"
    android:layout_width="match_parent"
    android:layout_height="92dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/previous_one"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/middle_fab"
        app:layout_constraintTop_toTopOf="@+id/gl_horizontal_a" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/next_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle_fab"
        app:layout_constraintTop_toTopOf="@+id/gl_horizontal_a" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/middle_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sound_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="46dp" />

</androidx.constraintlayout.widget.ConstraintLayout>