<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wrong_word_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_surface"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wrong_word_spelling"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="?alphaEmphasisHigh"
        android:gravity="start|bottom"
        android:textAppearance="@style/TextAppearance.LandingTheme.Headline6"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/wrong_word_en_zoom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wrong_word_ipa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="?alphaEmphasisMedium"
        android:gravity="start|top"
        android:textAppearance="@style/TextAppearance.LandingTheme.Body1"
        app:layout_constraintEnd_toStartOf="@+id/wrong_word_en_zoom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrong_word_spelling" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/wrong_word_en_zoom_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/en_explain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wrong_word_cn_zoom_button"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/wrong_word_cn_zoom_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/cn_explain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wrong_word_pron_button"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/wrong_word_pron_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/color_surface"
        android:contentDescription="@string/ic_content_description"
        app:icon="@drawable/ic_sound_24dp"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="@color/color_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/color_secondary_variant" />

</androidx.constraintlayout.widget.ConstraintLayout>