<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rearrange_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:alpha="?alphaEmphasisHigh"
        android:text="@string/rearrange_spelling_tips"
        android:textAppearance="@style/TextAppearance.LandingTheme.Body1"
        android:textColor="@color/color_on_surface" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rearrange_spelling_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:alpha="?alphaEmphasisHigh"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.LandingTheme.Headline4"
        android:textColor="@color/color_correct"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rearrange_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:alpha="?alphaEmphasisHigh"
            android:background="@drawable/landing_outline_surface"
            android:gravity="start|center_vertical"
            android:letterSpacing="0.08"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAppearance="@style/TextAppearance.LandingTheme.Headline5"
            android:textColor="@color/color_on_surface"
            app:layout_constraintEnd_toStartOf="@+id/rearrange_del_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rearrange_del_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/ic_content_description"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_close_24dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/color_primary_dark" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rearrange_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_button"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>